# Vulkan-Engine

./: .gitignore  CMakeLists.txt  GLSLtoSPIR-V.bat  README.md
base/: VEbase.cpp  VEbase.h  VEwindow.cpp  VEwindow.h
example/: CMakeLists.txt
example/test/: test.cpp
example/triangle/: triangle.cpp
example/uniform/: uniform.cpp  uniform.md
shaders/uniform/: uniform.vert  uniform.vert.spv
